--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "body-parser": "~1.8.1",
     "debug": "~2.0.0",
     "express": "~4.9.0",
+    "fs-extra": "^0.26.2",
+    "mongodb": "^2.1.1",
     "mongoose": "~3.8.23",
     "swig": "^1.4.2"
   }
