--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "^2.2.0",
     "express": "^4.13.4",
     "mongodb": "^2.1.1",
+    "mongoose": "^4.4.10",
     "swig": "^1.4.2"
   }
 }
