--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "body-parser": "^1.14.2",
     "debug": "^2.2.0",
     "express": "^4.13.4",
-    "mongodb": "^2.1.1",
-    "swig": "^1.4.2"
+    "mongodb": "2.2.24",
+    "superagent": "^3.5.2"
   }
 }
